# link2aws-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: link.rs
src/: arn.rs  lib.rs  main.rs  parts.rs
tests/: cli_tests.rs  data_tests.rs
tests/data/: aws-negative.json  aws.json
