[package]
name = "link2aws"
description = "Converts ARNs to direct links to the AWS console"
repository = "https://github.com/link2aws/link2aws-rs"
authors = ["Felix Kaiser"]
version = "0.1.0"
edition = "2024"
license = "ISC"
readme = "README.md"

[dependencies]
nom = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
serde_json = "1.0.143"
criterion = "0.5"

[[bin]]
name = "link2aws"
path = "src/main.rs"

[dependencies.clap]
version = "4.5.47"
features = ["derive"]

[[bench]]
name = "link"
harness = false
